# ClawLabs

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.ko.md  README.md  docker-compose.yml  pyproject.toml
docs/: agentic-ai-attack-patterns-report.md  demo-script.ko.md  local-mcp-attack-lab-record.ko.md  local-mcp-attack-lab.md  nanoclaw-mcp-final-report.ko.md  pure-wsl-nanoclaw-repro.ko.md
docs/wsl-hybrid-presentation-20260614/: presentation.html
nanoclaw-attack-lab/: RUNBOOK.md  google-workspace-mcp-baseline.json  google-workspace-mcp-defended.json  google-workspace-mcp-nanoclaw-baseline.json  google-workspace-mcp-nanoclaw-defended.json  google-workspace-mcp-support.mjs  google-workspace-mcp.mjs  google-workspace-tool-schemas.mjs  manual-google-workspace-chat.sh  manual-pure-wsl-chat.sh  nanoclaw-wsl-execution-report.html  report.html  run-google-workspace-lab.sh  run-pure-wsl-google-workspace.sh  safe-sink-mcp.mjs  wsl-only-hybrid-lib.sh  wsl-only-manual-chat.sh  wsl-only-run-google-workspace.sh
tests/: test_agent_environment.py  test_cli.py  test_final_demo.py  test_general_agent_environment.py  test_google_workspace_cli.py  test_google_workspace_direct_mcp.py  test_google_workspace_fixture_realism.py  test_google_workspace_mcp_stdio.py  test_google_workspace_policy.py  test_google_workspace_runner.py  test_lab_manifest.py  test_live_agent_attack_patterns.py  test_live_agent_environment.py  test_memory_final_demo.py  test_memory_mcp_stdio.py  test_nanoclaw_google_workspace.py  test_nanoclaw_google_workspace_defended_policy.py  test_rag_search_final_demo.py  test_real_attack_reproductions.py  test_scenario_pack_demo.py  test_shopping_final_demo.py  test_shopping_webmcp_frontend.py  test_shopping_webmcp_lab.py  test_shopping_webmcp_stdio.py  test_tool_confusion_final_demo.py
webmcp-shopping-lab/: README.md  app.js  claude-mcp-normal.json  claude-mcp-poisoned.json  claude-mcp-unified.json  evidence.html  evidence.js  index.html  lab.html  lab.js  styles.css  third-party-widget.js  unified-mcp-run-report.md  webmcp-bridge.mjs
(+62 files in other folders)
